# speech-emotion-recognition

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
frontend/: app.py
notebooks/: 01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_modelling.ipynb  04_prediction.ipynb  template.ipynb
src/: config.py  data_loader.py  evaluate.py  features.py  sweep.py  training.py
tests/: test_config.py  test_data_loader.py  test_evaluate.py  test_features.py  test_training.py
