[project]
name = "speech-emotion-recognition"
version = "0.1.0"
description = "Speech Emotion Recognition with classical ML"
requires-python = ">=3.11"

# ── Ruff configuration ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
# Directories to completely ignore
extend-exclude = [
    "data",
    "models",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B905",   # zip without strict= (Python <3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Pytest configuration ───────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
